Prevent displayed numbers from overflowing into the rest of the page

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ h1 {
     margin: 10px;
     background-color: antiquewhite;
     border-radius: 7px;
+    overflow: auto;
 }
 
 .buttons {
